# parILU

./: .buildinfo  .clang-tidy  .gitignore  CMakeLists.txt  README.md  environment-dev.yml  genindex.html  index.html  internal-api.html  objects.inv  parilu.sh  search.html  searchindex.js  user-api.html
.doctrees/: environment.pickle  index.doctree  internal-api.doctree  user-api.doctree
.github/workflows/: clang-checks.yml  docs.yml
_sources/: index.rst.txt  internal-api.rst.txt  user-api.rst.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  internal-api.rst  user-api.rst
examples/: ilu.c  parilu.c
include/: parilu-defs.h.in  parilu-impl.h  parilu-types.h  parilu.h
src/: ilu-setup.c  parilu-impl.c  parilu-io.c  parilu-mat.c  parilu-matrix-operator.c  parilu-matrix.c  parilu-options.c  parilu-parse-opts.c  parilu-partition.c  parilu-setup.c  parilu.c
tests/: parilu-100-laplacian-2x2.mtx  parilu-100-laplacian-4x4.mtx  parilu-100-mat-op.c  parilu-100-matrix-operation.c
